apps/ingress/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
spec:
  template:
    spec:
      containers:
      - name: ingress
