apps/ingress/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: in.contextsuite.dev  # Change from .com to .dev
      http:
        paths:
          - backend:
              service:
                name: ingress
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - in.contextsuite.dev
      secretName: ingress-tls  # Use cert-manager generated secret
